# PASTA-fork

./: .gitignore  CMakeLists.txt  GettingStarted.md  LICENSE  README.md  build-sample.config  timing-results-cori.tgz  timing-results.tgz
benchmarks/: CMakeLists.txt  dadd.c  dadd_eq.c  dadd_eq_gpu.cu  dadd_eq_hicoo.c  dadd_eq_hicoo_gpu.cu  ddiv_eq.c  ddiv_eq_gpu.cu  ddiv_eq_hicoo.c  ddiv_eq_hicoo_gpu.cu  dmul.c  dmul_eq.c  dmul_eq_gpu.cu  dmul_eq_hicoo.c  dmul_eq_hicoo_gpu.cu  dsub.c  dsub_eq.c  dsub_eq_gpu.cu  dsub_eq_hicoo.c  dsub_eq_hicoo_gpu.cu  get_tuple.c  khatri-rao.c  kronecker.c  loadstore.c  mttkrp.c  mttkrp_gpu.cu  mttkrp_hicoo.c  mttkrp_hicoo_gpu.cu  sadd.c  sadd_gpu.cu  sadd_hicoo.c  sadd_hicoo_gpu.cu  smul.c  smul_gpu.cu  smul_hicoo.c  smul_hicoo_gpu.cu  sort.c  status.c  ttm.c  ttm_gpu.cu  (+6 more)
benchmarks/extension/: new_bench.c
benchmarks/test_scripts/: common.sh  run_pasta_all.sh  run_pasta_all_coo.sh  run_pasta_all_cpu.sh  run_pasta_all_hicoo.sh  run_pasta_dadd_eq.sh  run_pasta_dadd_eq_hicoo.sh  run_pasta_ddiv_eq.sh  run_pasta_ddiv_eq_hicoo.sh  run_pasta_dmul_eq.sh  run_pasta_dmul_eq_hicoo.sh  run_pasta_dsub_eq.sh  run_pasta_dsub_eq_hicoo.sh  run_pasta_mttkrp.sh  run_pasta_mttkrp_hicoo.sh  run_pasta_sadd.sh  run_pasta_sadd_hicoo.sh  run_pasta_smul.sh  run_pasta_smul_hicoo.sh  run_pasta_tew.sh  run_pasta_tew_eq.sh  run_pasta_tew_same.sh  run_pasta_ts.sh  run_pasta_ttm.sh  run_pasta_ttm_hicoo.sh  run_pasta_ttv.sh  run_pasta_ttv_hicoo.sh
benchmarks/test_scripts/backup/: run_pasta_ddiv_eq.sh  run_pasta_dmul_eq.sh  run_pasta_dsub_eq.sh  run_pasta_dsub_eq_hicoo.sh  run_pasta_sadd.sh  run_pasta_tew.sh
docs/html/: _par_t_i_8h.html  _par_t_i_8h_source.html  _sp_t_o_l_8h_source.html  add_8c.html  add_8c_source.html  add__omp_8c.html  add__omp_8c_source.html  append_8c.html  append_8c_source.html  collect_8c.html  collect_8c_source.html  cudawrap_8cu.html  cudawrap_8cu_source.html  ddiv_8c.html  ddiv_8c_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dmul_8c.html  dmul_8c_source.html  dmul__eq_8c.html  dmul__eq_8c_source.html  dmul__eq__cuda_8cu.html  dmul__eq__cuda_8cu_source.html  dmul__eq__omp_8c.html  dmul__eq__omp_8c_source.html  error_8c.html  error_8c_source.html  error_8h.html  error_8h_source.html  files.html  fromssp_8c.html  fromssp_8c_source.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  khatri-rao_8c.html  khatri-rao_8c_source.html  kronecker_8c.html  (+79 more)
docs/html/search/: all_a.js  all_c.js  enums_0.js  enumvalues_0.js  functions_1.js  pages_0.js  typedefs_0.js
ert_results/: README.txt
ert_results/marianas_omp/Run.001/: roofline.json
ert_results/marianas_omp/Run.001/FLOPS.032/: driver1.kernel1
ert_results/marianas_omp/Run.001/FLOPS.032/OpenMP.0016/: graph1.gnu  max  pre  sum  try.001  try.002  try.003  try.004  try.005
ert_results/myConfigs/: ert_cori_omp.config  ert_dgx2_volta_gpu.config  ert_marianas_gpu.config  ert_marianas_omp.config  ert_r2_omp.config  ert_wingtip-bigmem1_omp.config
extension/: new_kernel.c  new_structs.h
include/: ParTI.h  pasta.h
include/includes/: error.h  helper_funcs.h  macros.h  matrices.h  sptensors.h  ssptensors.h  structs.h  types.h  vectors.h
results/: common.py  get_mttkrp.py  get_tew_eq.py  get_ts.py  get_ttm.py  get_ttv.py  graph_bluesky  graph_bluesky_seq  graph_dgx-cpu  graph_dgx-gpu_seq  graph_dgx1  graph_dgx2  graph_wingtip-bigmem2  graph_wingtip-bigmem2_seq  plot_gflops.py  plot_gflops_coo_cpu.py  plot_gflops_coo_gpu.py  plot_gflops_gpu.py  plot_gflops_gpu_new.py  plot_gflops_gpu_total.py  plot_gflops_omp.py  plot_gflops_seq.py  plot_mode-behavior-ttm-gpu.py  plot_numa_effect.py  plots.py  real_bluesky  real_bluesky_seq  real_dgx-cpu  real_dgx-cpu_seq  real_dgx1  real_dgx2  real_wingtip-bigmem2  real_wingtip-bigmem2_seq  roofline.py
results/backup/: get_tew.py  get_tew_eq.py  get_ttm.py  get_ttv.py  plot_gflops.py  plot_gflops_coo_cpu.py  plot_gflops_coo_gpu.py  plot_gflops_gpu.py  plot_gflops_gpu_noroofline.py  plot_speedup_omp.py  plot_time.py
results/references/: cum-2.py  cum.py  part-vs-full.py
src/: base.c  cudawrap.cu  cudawrap.h  locks.c  timer.c  timer_cuda.cu
src/array/: array.c
src/error/: error.c
src/matrix/: dump.c  fromsp.c  matrix.c  rankmatrix.c
src/spmatrix/: spmatrix.c
src/sptensor/: collect.c  dadd.c  dadd_eq.c  dadd_eq_cuda.cu  dadd_eq_omp.c  dadd_omp.c  ddiv.c  ddiv_eq.c  ddiv_eq_cuda.cu  ddiv_eq_omp.c  dmul.c  dmul_eq.c  dmul_eq_cuda.cu  dmul_eq_omp.c  dmul_omp.c  dsub.c  dsub_eq.c  dsub_eq_cuda.cu  dsub_eq_omp.c  dsub_omp.c  dump.c  fromssp.c  idxbounds.c  khatri-rao.c  kronecker.c  load.c  matricize.c  mmul.c  mmul_cuda.cu  mmul_cuda_kernels.cu  mmul_cuda_kernels.h  mmul_omp.c  mttkrp.c  mttkrp_cuda.cu  mttkrp_cuda_kernels.cu  mttkrp_cuda_kernels.h  mttkrp_omp.c  norm.c  sadd.c  sadd_cuda.cu  (+15 more)
src/sptensor/hicoo/: convert.c  dadd_eq.c  dadd_eq_cuda.cu  dadd_eq_omp.c  ddiv_eq.c  ddiv_eq_cuda.cu  ddiv_eq_omp.c  dmul_eq.c  dmul_eq_cuda.cu  dmul_eq_omp.c  dsub_eq.c  dsub_eq_cuda.cu  dsub_eq_omp.c  dump.c  hicoo.c  mmul.c  mmul_cuda.cu  mmul_omp.c  mttkrp.c  mttkrp_cuda.cu  mttkrp_cuda_kernels.cu  mttkrp_cuda_kernels.h  mttkrp_omp.c  sadd.c  sadd_cuda.cu  sadd_omp.c  setinds.c  smul.c  smul_cuda.cu  smul_omp.c  status.c  vmul.c  vmul_cuda.cu  vmul_omp.c
src/ssptensor/: append.c  compare.c  dump.c  fromsp.c  merge.c  mmul.c  norm.c  setinds.c  setmode.c  sort.c  ssptenmat.c  ssptensor.c  ssptensor.h
src/ssptensor/hicoo/: convert.c  dump.c  semi-hicoo.c  setinds.c
src/vector/: array.c  dump.c  sort.c  vector.c
tests/: CMakeLists.txt  test_ttm.c
tools/: generate_fixed_tensor.py  plot_roofline.py
